kubernetes/core/production/vpn/terminal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terminal
  labels:
    app: terminal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terminal
  template:
    metadata:
      labels:
        app: terminal
    spec:
      containers:
      - name: alpine
        image: alpine@sha256:02bb6f428431fbc2809c5d1b41eab5a68350194fb508869a33cb1af4444c9b11
        command:
        - /bin/sh
        - -c
        - while true; do
          sleep 600 &
          wait $!;
          done
